[gd_scene load_steps=5 format=3 uid="uid://bqfg257x73pjd"]

[ext_resource type="Script" path="res://player.gd" id="1_xq87f"]
[ext_resource type="Theme" uid="uid://ceb54j815ji87" path="res://UI.tres" id="2_ecp58"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_qc8b6"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_brkr6"]
size = Vector2(50, 50)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.999008, 0, 0, 0, 0.999008, 0, 0, 0, 0.999008, 0, 0, 0)
input_ray_pickable = false
script = ExtResource("1_xq87f")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.05494, 0)
shape = SubResource("CapsuleShape3D_qc8b6")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1.00099, 0, 0, 0, 1.00099, 0, 0, 0, 1.00099, 0, 1.55087, 0)

[node name="raycast3d" type="RayCast3D" parent="Camera3D"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="CanvasLayer" type="CanvasLayer" parent="Camera3D"]

[node name="Panel" type="Panel" parent="Camera3D/CanvasLayer"]
offset_top = 560.0
offset_right = 235.0
offset_bottom = 646.0

[node name="HSplitContainer" type="HSplitContainer" parent="Camera3D/CanvasLayer/Panel"]
layout_mode = 0
offset_right = 235.0
offset_bottom = 86.0

[node name="Health_Container" type="VSplitContainer" parent="Camera3D/CanvasLayer/Panel/HSplitContainer"]
layout_mode = 2

[node name="Meter_Health" type="ProgressBar" parent="Camera3D/CanvasLayer/Panel/HSplitContainer/Health_Container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ecp58")

[node name="Label_Health" type="Label" parent="Camera3D/CanvasLayer/Panel/HSplitContainer/Health_Container"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ecp58")
theme_override_font_sizes/font_size = 20
text = "Health"
horizontal_alignment = 1

[node name="Food_Container" type="VSplitContainer" parent="Camera3D/CanvasLayer/Panel/HSplitContainer"]
layout_mode = 2

[node name="Meter_Food" type="ProgressBar" parent="Camera3D/CanvasLayer/Panel/HSplitContainer/Food_Container"]
layout_mode = 2
theme = ExtResource("2_ecp58")

[node name="Label_Food" type="Label" parent="Camera3D/CanvasLayer/Panel/HSplitContainer/Food_Container"]
layout_mode = 2
theme = ExtResource("2_ecp58")
theme_override_font_sizes/font_size = 20
text = "Health"
horizontal_alignment = 1

[node name="VSplitContainer" type="VSplitContainer" parent="Camera3D/CanvasLayer"]
offset_left = 540.0
offset_top = 272.0
offset_right = 598.0
offset_bottom = 295.0

[node name="Sprite2D" type="Sprite2D" parent="Camera3D/CanvasLayer/VSplitContainer"]
position = Vector2(28, 49)
texture = SubResource("PlaceholderTexture2D_brkr6")

[node name="Label" type="Label" parent="Camera3D/CanvasLayer/VSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_ecp58")
horizontal_alignment = 1
